--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,12 +9,16 @@
     <string name="title_activity_calendar_view">CalendarView</string>
     <string name="calendar"> This is the Calendar View</string>
     <string name="CalendarButtonLabel">CALENDAR</string>
-	<string name="AvatarButtonLabel">CUSTOMIZE AVATAR</string>
-	<string name="AddButtonLabel"> +      Add Task</string>
-	<string name="AchievementsButtonLabel">ACHIEVEMENTS</string>
-	<color name="BackgroundColor">#C7F0C0</color>
-	<color name="CalendarButtonColor">#00CC00</color>
-	<color name="AchievementsButtonColor">#FFFF00</color>
-	<color name="AvatarButtonColor">#0066FF</color>
-	<color name="AddTaskButtonColor">#B8B8B8</color>
+    <string name="AvatarButtonLabel">CUSTOMIZE AVATAR</string>
+    <string name="AddButtonLabel"> +      Add Task</string>
+    <string name="AchievementsButtonLabel">ACHIEVEMENTS</string>
+	<string name="Avatar"> This is the avatar view</string>
+    <color name="BackgroundColor">#C7F0C0</color>
+    <color name="CalendarButtonColor">#00CC00</color>
+    <color name="AchievementsButtonColor">#FFFF00</color>
+    <color name="AvatarButtonColor">#0066FF</color>
+    <color name="AddTaskButtonColor">#B8B8B8</color>
+
+    <string name="title_activity_avatar">AvatarActivity</string>
+
 </resources>
