--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,8 +11,22 @@
     <string name="CalendarButtonLabel">CALENDAR</string>
     <string name="AvatarButtonLabel">CUSTOMIZE AVATAR</string>
     <string name="AddButtonLabel"> +      Add Task</string>
+    <string name="SundayLabel">Sun</string>
+    <string name="MondayLabel">Mon</string>
+    <string name="TuesdayLabel">Tue</string>
+    <string name="WednesdayLabel">Wed</string>
+    <string name="ThursdayLabel">Thur</string>
+    <string name="FridayLabel">Fri</string>
+    <string name="SaturdayLabel">Sat</string>
     <string name="AchievementsButtonLabel">ACHIEVEMENTS</string>
 	<string name="Avatar"> This is the avatar view</string>
+	<string-array name="task_types">
+	    <item>School</item>
+	    <item>Hygiene</item>
+	    <item>Travel</item>
+	    <item>Custom</item>
+	</string-array>
+	<color name="TextFieldColor">#FFFFFF</color>
     <color name="BackgroundColor">#C7F0C0</color>
     <color name="CalendarButtonColor">#00CC00</color>
     <color name="AchievementsButtonColor">#FFFF00</color>
@@ -20,19 +34,5 @@
     <color name="AddTaskButtonColor">#B8B8B8</color>
 
     <string name="title_activity_avatar">AvatarActivity</string>
-    
-    <style name="ButtonText">
-    <item name="android:layout_width">fill_parent</item>
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:textColor">#ffffff</item>
-    <item name="android:gravity">center</item>
-    <item name="android:layout_margin">3dp</item>
-    <item name="android:textSize">30dp</item>
-    <item name="android:textStyle">bold</item>
-    <item name="android:shadowColor">#000000</item>
-    <item name="android:shadowDx">1</item>
-    <item name="android:shadowDy">1</item>
-    <item name="android:shadowRadius">2</item>
-</style>
 
 </resources>
