--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,19 +5,18 @@
     <string name="action_settings">Settings</string>
     <string name="welcome">Welcome to Key Life Planner</string>
     <string name="title_activity_calendar">CalendarActivity</string>
-    <string name="hello_world">Hello world!</string>
     <string name="title_activity_calendar_view">CalendarView</string>
     <string name="calendar"> This is the Calendar View</string>
     <string name="CalendarButtonLabel">CALENDAR</string>
     <string name="AvatarButtonLabel">CUSTOMIZE AVATAR</string>
     <string name="AddButtonLabel"> +      Add Task</string>
-    <string name="SundayLabel">Sun</string>
-    <string name="MondayLabel">Mon</string>
-    <string name="TuesdayLabel">Tue</string>
-    <string name="WednesdayLabel">Wed</string>
-    <string name="ThursdayLabel">Thur</string>
-    <string name="FridayLabel">Fri</string>
-    <string name="SaturdayLabel">Sat</string>
+    <string name="SundayLabel">SUN</string>
+    <string name="MondayLabel">MON</string>
+    <string name="TuesdayLabel">TUE</string>
+    <string name="WednesdayLabel">WED</string>
+    <string name="ThursdayLabel">THUR</string>
+    <string name="FridayLabel">FRI</string>
+    <string name="SaturdayLabel">SAT</string>
     
     <string name="AchievementsButtonLabel">ACHIEVEMENTS</string>
 	<string name="Avatar"> This is the avatar view</string>
@@ -28,8 +27,8 @@
     	<item>Custom</item>
 	</string-array>
 	<color name="TextFieldColor">#FFFFFF</color>
-    <color name="BackgroundColor">#C7F0C0</color>
-    <color name="CalendarButtonColor">#00CC00</color>
+    <color name="KeyLimeBackgroundColor">#C7F0C0</color>
+    <color name="CalendarBackgroundColor">#70c656</color>
     <color name="AchievementsButtonColor">#FFFF00</color>
     <color name="AvatarButtonColor">#0066FF</color>
     <color name="AddTaskButtonColor">#B8B8B8</color>
