--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="calendar"> This is the Calendar View</string>
     <string name="CalendarButtonLabel">CALENDAR</string>
     <string name="AvatarButtonLabel">CUSTOMIZE AVATAR</string>
+    <string name="SubmitButtonLabel">Submit </string>
     <string name="AddButtonLabel"> + Add</string>
     <string name="SundayLabel">SUN</string>
     <string name="MondayLabel">MON</string>
@@ -17,16 +18,52 @@
     <string name="ThursdayLabel">THUR</string>
     <string name="FridayLabel">FRI</string>
     <string name="SaturdayLabel">SAT</string>
-    
     <string name="AchievementsButtonLabel">ACHIEVEMENTS</string>
-	<string name="Avatar"> This is the avatar view</string>
-	<string-array name="task_types">
-	    <item>School</item>
-	    <item>Hygiene</item>
-    	<item>Travel</item>
-    	<item>Custom</item>
-	</string-array>
-	<color name="white">#FFFFFF</color>
+    <string name="Avatar"> This is the avatar view</string>
+
+    <string-array name="task_types">
+        <item>School</item>
+        <item>Hygiene</item>
+        <item>Travel</item>
+        <item>Custom</item>
+    </string-array>
+    <string-array name="days">
+        <item>Sunday</item>
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+    </string-array>
+    <string-array name="times">
+        <item>1 am</item>
+        <item>2 am</item>
+        <item>3 am</item>
+        <item>4 am</item>
+        <item>5 am</item>
+        <item>6 am</item>
+        <item>7 am</item>
+        <item>8 am</item>
+        <item>9 am</item>
+        <item>10 am</item>
+        <item>11 am</item>
+        <item>12 am</item>
+        <item>1 pm</item>
+        <item>2 pm</item>
+        <item>3 pm</item>
+        <item>4 pm</item>
+        <item>5 pm</item>
+        <item>6 pm</item>
+        <item>7 pm</item>
+        <item>8 pm</item>
+        <item>9 pn</item>
+        <item>10 pm</item>
+        <item>11 pm</item>
+        <item>12 am</item>
+    </string-array>
+
+    <color name="white">#FFFFFF</color>
     <color name="KeyLimeBackgroundColor">#C7F0C0</color>
     <color name="CalendarBackgroundColor">#70c656</color>
     <color name="AchievementsButtonColor">#FFFF00</color>
@@ -34,19 +71,23 @@
     <color name="AddTaskButtonColor">#B8B8B8</color>
 
     <string name="title_activity_avatar">AvatarActivity</string>
-    
+
     <style name="ButtonText">
-    <item name="android:layout_width">fill_parent</item>
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:textColor">#ffffff</item>
-    <item name="android:gravity">center</item>
-    <item name="android:layout_margin">3dp</item>
-    <item name="android:textSize">30dp</item>
-    <item name="android:textStyle">bold</item>
-    <item name="android:shadowColor">#000000</item>
-    <item name="android:shadowDx">1</item>
-    <item name="android:shadowDy">1</item>
-    <item name="android:shadowRadius">2</item>
-</style>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:shadowColor">#000000</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
+
+    
+    <string name="title_activity_add_task">AddTaskActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
