Calendar Buttons, Achievement View
added functionality that allowed the day buttons on calendar view to
switch from inactive and active and display info from different
arraylists

added an achievement view with listview layout, added some hardcoded
achievements

Added functionality to addtask button

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -86,8 +86,8 @@
         <item name="android:shadowRadius">2</item>
     </style>
 
-    
     <string name="title_activity_add_task">AddTaskActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_achievement">AchievementActivity</string>
 
 </resources>
