--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="CalendarButtonLabel">CALENDAR</string>
     <string name="AvatarButtonLabel">CUSTOMIZE AVATAR</string>
     <string name="SubmitButtonLabel">Submit </string>
-    <string name="AddButtonLabel"> + Add</string>
+    <string name="AddButtonLabel"> + Add New Task</string>
     <string name="SundayLabel">SUN</string>
     <string name="MondayLabel">MON</string>
     <string name="TuesdayLabel">TUE</string>
