WIP: fixed UI for adding task

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="SaturdayLabel">SAT</string>
     <string name="AchievementsButtonLabel">ACHIEVEMENTS</string>
     <string name="Avatar"> This is the avatar view</string>
+    <string name="namelabel">Task Name:</string>
+    <string name="categorylabel">Task Category:</string>
+    <string name="duebylabel">Due By:</string>
 
     <string-array name="task_types">
         <item>School</item>
