--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,7 @@
         <item>School</item>
         <item>Hygiene</item>
         <item>Travel</item>
+        <item>Work</item>
         <item>Custom</item>
     </string-array>
     <string-array name="days">
