--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="FridayLabel">FRI</string>
     <string name="SaturdayLabel">SAT</string>
     <string name="AchievementsButtonLabel">ACHIEVEMENTS</string>
-    <string name="Avatar"> This is the avatar view</string>
+    <string name ="title_store">STORE</string>
     
-    <string name="addtasklabel">Add Task</string>
+    <string name="addtasklabel">ADD TASK</string>
     <string name="namelabel">TASK NAME : </string>
     <string name="categorylabel">TASK CATEGORY : </string>
     <string name="duebylabel">DUE BY : </string>
@@ -30,9 +30,8 @@
     <string-array name="task_types">
         <item>School</item>
         <item>Hygiene</item>
-        <item>Travel</item>
         <item>Work</item>
-        <item>Other</item>
+        <item>Custom</item>
     </string-array>
     <string-array name="days">
         <item>Sunday</item>
@@ -77,7 +76,7 @@
     <color name="AvatarButtonColor">#0066FF</color>
     <color name="AddTaskButtonColor">#B8B8B8</color>
 
-    <string name="title_activity_avatar">AvatarActivity</string>
+    <string name="title_activity_avatar">Your Avatar</string>
 
     <style name="ButtonText">
         <item name="android:layout_width">fill_parent</item>
